# Annie

./: .buildinfo  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  release-please-config.json  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/annie/: index.doctree
.doctrees/playbooks/: browse-and-curate.doctree  index.doctree  segment-review.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  docker.yml  docs.yml
_modules/: index.html
_modules/annie/: app.html
_modules/annie/core/: config.html  logbook.html  models.html  state.html  theme.html
_modules/annie/dataset/: corrections.html  datasets.html  filtering.html  manipulate.html  scanning.html  segments.html  sources.html  storage.html
_modules/annie/media/: clipping.html  color.html  compose.html  convert.html  decode.html  preview.html  probe.html  rendering.html
_modules/annie/pages/: annotator.html  browse.html  convert.html  csv_dialog.html  dataset.html  folder_picker.html  fsbrowse.html  home.html  lazy.html  logs.html  paging.html  reveal.html  settings.html  utils.html  viewport.html
_modules/annie/parsers/: base.html  csvmeta.html  participants.html  track.html  vdet.html
_sources/autoapi/: index.rst.txt
_sources/autoapi/annie/: index.rst.txt
_sources/playbooks/: index.md.txt
annie/: __init__.py  app.py
annie/core/: config.py  logbook.py  models.py  state.py  theme.py
annie/dataset/: corrections.py  datasets.py  filtering.py  manipulate.py  scanning.py  segments.py  sources.py  storage.py
annie/media/: clipping.py  color.py  compose.py  convert.py  decode.py  preview.py  probe.py  rendering.py
annie/pages/: __init__.py  annotator.py  browse.py  convert.py  csv_dialog.py  dataset.py  folder_picker.py  fsbrowse.py  home.py  lazy.py  logs.py  paging.py  reveal.py  settings.py  utils.py  viewport.py
annie/parsers/: __init__.py  base.py  csvmeta.py  participants.py  track.py  vdet.py
autoapi/: index.html
autoapi/annie/: index.html
autoapi/annie/app/: index.html
autoapi/annie/core/: index.html
autoapi/annie/dataset/: index.html
autoapi/annie/media/: index.html
autoapi/annie/pages/: index.html
autoapi/annie/parsers/: index.html
data/config/: fi_mini.json  mosei_mini.json
docs/: conf.py  index.rst
docs/playbooks/: browse-and-curate.md  index.md  segment-review.md
playbooks/: browse-and-curate.html  index.html  segment-review.html
scripts/: screenshot_docs.py
tests/: fixtures.py
tests/core/: test_config_theme_decode.py  test_logbook.py  test_models.py  test_state.py
tests/dataset/: test_corrections.py  test_datasets.py  test_filtering.py  test_manipulate.py  test_scanning.py  test_segments.py  test_sources.py  test_storage.py
tests/media/: test_clipping.py  test_color.py  test_compose.py  test_convert.py  test_preview.py  test_probe.py  test_rendering.py  test_reveal.py
tests/pages/: _nicegui.py  test_annotator_dequeue.py  test_annotator_tasks.py  test_browse_facets.py  test_browse_manipulate.py  test_browse_selection.py  test_curation_row.py  test_dataset_dbs.py  test_fsbrowse.py  test_paging.py  test_segment_review.py  test_viewport.py
tests/parsers/: test_base.py  test_csvmeta.py  test_participants.py  test_track.py  test_vdet.py
(+166 files in other folders)
